# PyNetConf

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  makefile  setup.cfg  setup.py
pynetconf/: __init__.py  session.py
scripts/: netconf-cli
tests/: test.py
