#   PyNetConf - IETF Network Configuration Protocol (NETCONF) Client Library
#   Copyright (C) 2014 Paul Greenberg <paul@greenberg.pro>
#
#   This program is free software: you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation, either version 3 of the License, or
#   (at your option) any later version.
#
#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program.  If not, see <http://www.gnu.org/licenses/>.

[metadata]
name = PyNetConf
version = 1.0
summary = IETF Network Configuration Protocol (NETCONF) Client Library
download_url = https://github.com/greenpau/PyNetConf/raw/master/dist/PyNetConf-1.0.tar.gz
home_page = https://github.com/greenpau/PyNetConf
author = Paul Greenberg
author_email = paul@greenberg.pro
license = GPLv3
platform = any
description-file = README.md
classifier = Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Operating System :: OS Independent
    Topic :: System :: Systems Administration
    Topic :: System :: Monitoring
    Topic :: System :: Networking
    Topic :: System :: Networking :: Monitoring
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[files]
packages =
    pynetconf

extra_files = README.md
    LICENSE
    tests/test.py
    setup.cfg
    setup.py
